# TongYiOCR

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.gpu.yml  docker-compose.yml  engine_server.py  pyproject.toml  requirements.engine.txt  requirements.glmocr.txt  requirements.txt  run.py  start.bat  start.sh
.github/workflows/: ci.yml
app/: config.py  glmocr_client.py  layout_postprocess.py  main.py  paddleocr_vl_client.py  pdf_utils.py  schemas.py  task_queue.py  unlimited_ocr_client.py
docker/: entrypoint.sh
docs/: layout-reconstruction-guide.md
examples/: client_example.py
static/: index.html
tests/: test_proxy.py
